# dse_polars

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml
marimo/: dev1.py
marimo/__marimo__/session/: dev1.py.json
src/dse_polars/: __init__.py  dse.py  images.py  texts.py  urnutils.py
test/: test_dse.py  test_images.py  test_texts.py
test/data/: septuagint_latin_genesis_dse.cex  targum_latin_genesis_dse.cex
